2008-02-11  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-controls.c:

	- Block the 'value-changed' signal handlers on the scales when the
	  value is changed by the application rather than user.
	- Correct the signature of "value-changed" signal handler.
	- Unit for 'Seek' is "ABS_TIME" rather than "TIME".

2008-02-11  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-controls.c:

	Implement seeking.

2008-02-10  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	Update the controls when the renderer selection changes.

2008-02-10  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-controls.c:
	* src/av-cp/renderer-controls.h:

	Rename update_playback_controls_sensitivity() to
	prepare_controls_for_state().

2008-02-10  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-controls.c:

	Track media position of currently selected renderer.

2008-02-09  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	- No need to strdup() udn for each callback as the callback can get
	  a const reference to udn from the service proxy, itself.
	- Fix the proxy (un)ref'ing.

2008-02-09  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-controls.c:
	* src/av-cp/renderer-controls.h:

	Add function to set the position of position hscale.

2008-02-09  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	Track media duration instead of track duration.

2008-02-08  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-controls.c:
	* src/av-cp/renderer-controls.h:

	Keep track of current track duration on each renderer, both in
	renderer treemodel and renderer control UI.

2008-02-04  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-controls.c:
	* src/av-cp/renderer-controls.h:

	Update the sensitivity of playback controls based on state of